fix: spacing between paragraphs

--- a/root.css
+++ b/root.css
@@ -95,7 +95,7 @@ a {
 }
 
 p {
-  margin-block-end: 0.5rem;
+  margin-block-end: 0.9rem;
 }
 
 .wrapper {
